--- a/film.html
+++ b/film.html
@@ -70,7 +70,7 @@
                     до прилёта следующей миссии «Арес-4».
                   </p>
                 </div>
-                <div class="content-film_info_controls">
+                <div class=" ">
                   <button>Смотреть</button>
                 </div>
               </div>
