--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netcliks</title>
+    <script src="script.js" defer>
+
+    </script>
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <header class="header">
       <div class="container">
@@ -28,8 +32,8 @@
       <section class="search">
         <div class="container">
           <div class="search-box">
-            <input type="text" placeholder="Что хотите посмотреть?" />
-            <button>
+            <input id="search-input" type="text" placeholder="Что хотите посмотреть?" />
+            <button id="search-button">
               <img src="images/free-icon-search-2414255 1.svg" alt="search" />
               <span>Найти</span>
             </button>
